--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- <meta name="theme-color" content="#000000" /> -->
-    <meta name="description" content="푸른마을 프로젝트 using create-react-app"
-    />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <link rel="icon" href="./images/logo192.png" />
-    <link real="shortcut icon" href="./images/logo192.png" type="image/x-ion">
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
-    <link rel="apple-touch-icon" href="./images/logo192.png" />
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
-    <link rel="stylesheet" href="./css/style.css"/>
-    <script Src="./script/lib/jquery-1.12.3.js"></script>
-    <script Src="./script/script.js" defer></script>
-    <title>푸른마을</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- <meta name="theme-color" content="#000000" /> -->
+  <meta name="description" content="푸른마을 프로젝트 using create-react-app" />
+  <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+  <link rel="icon" href="./images/logo192.png" />
+  <link real="shortcut icon" href="./images/logo192.png" type="image/x-ion">
+  <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
+  <link rel="apple-touch-icon" href="./images/logo192.png" />
+  <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+
+  <link rel="stylesheet" href="./css/style.css" />
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script src="./script/lib/jquery-1.12.3.js"></script>
+  <script src="./script/script.js" type="text/babel" defer></script>
+  <title>푸른마을</title>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
